--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://daltonscharff.github.io/budget-calculator"
+  "homepage": "https://daltonscharff.github.io/budget-calculator",
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
+  }
 }
