--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://daltonscharff.github.io/budget-calculator",
+  "homepage": "/budget-calculator",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "react-router-dom": "^6.2.1",
     "tailwindcss": "^3.0.7"
   }
 }
